<resources>

    <!-- string arrays !-->
    <string-array name="sg_estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RR</item>
        <item>RO</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>


    <!-- Hint !-->

    <string name="app_name">Auular</string>
    <string name="hint_documento_tutor">000.000.000-00</string>
    <string name="hint_documento_empresa">00.000.000/0000-00</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="hint_nome_tutor">Insira seu nome aqui</string>
    <string name="hint_email">Digite seu email</string>
    <string name="hint_nome">Digite o nome do local</string>
    <string name="hint_cep">Digite o CEP</string>
    <string name="hint_estado">Selecione o estado</string>
    <string name="hint_logradouro">Digite o logradouro</string>
    <string name="hint_cidade">Digite a sua cidade</string>
    <string name="hint_bairro">Digite o bairro</string>
    <string name="hint_telefone">Digite o telefone</string>


    <!-- EditText !-->
    <string name="et_search">Pesquisar</string>
    <string name="et_senha">Senha</string>
    <string name="et_esqueceu">Esqueceu sua senha?</string>
    <string name="et_nome_tutor">Nome</string>


    <!-- TextView !-->
    <string name="tv_telefone">Telefone</string>
    <string name="tv_email">Endereço de e-mail</string>
    <string name="tv_documento_tutor">CPF</string>
    <string name="tv_documento_empresa">CNPJ</string>
    <string name="tv_tutor">Tutor</string>
    <string name="tv_empresa">Empresa</string>
    <string name="tv_nome">Nome</string>
    <string name="tv_cep">CEP</string>
    <string name="tv_estado">Estado</string>
    <string name="tv_logradouro">Logradouro</string>
    <string name="tv_cidade">Cidade</string>
    <string name="tv_bairro">Bairro</string>
    <string name="tv_lotacao">Lotação Máxima</string>
    <string name="tv_servicos">Serviços</string>
    <string name="tv_animais_permitidos">Animais permitidos</string>
    <string name="tv_animais_imagens">Insira imagens de seu estabelecimento para mostrar aos seus novos clientes! (Formato PNG ou JPG)</string>
    <string name="tv_manter_conectado">Manter conectado neste dispositivo</string>
    <string name="tv_animais_deseja_email">Desejo receber conteúdos e promoções via e-mail</string>
    <string name="tv_mensagem_erro">Ops! Parece que comeram alguns cabos...</string>
    <string name="tv_by_auular">Made by - Auular ©</string>
    <string name="tv_confira">Confira os hotéis cadastrados na nossa plataforma!</string>
    <string name="tv_descubra">Descubra os hotéis cadastrados na Auular!</string>


    <!-- Button !-->
    <string name="button_cadastro">Cadastro</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_login">Login</string>
    <string name="button_avancar">Avançar</string>
    <string name="button_voltar_home">Home</string>
    <string name="button_voltar">Voltar</string>


    <string name="title_activity_home_tutor">home_tutor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="mapbox_access_token">sk.eyJ1IjoiZ3Nzb3V6YSIsImEiOiJjbGdoYWNodWIwMWNtM2dsbHRpMjAzYzVlIn0.-bULwyE9axLpmow4rzuYJA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_1_2_3">1 - 2 - 3</string>
    <string name="empresa">Empresa</string>
    <string name="nome">Nome</string>
    <string name="matheus_eloy_palasson">Matheus Eloy Palasson</string>
    <string name="endere_o_de_e_mail">Endereço de e-mail</string>
    <string name="matheus_palasson_gmail_com">matheus.palasson@gmail.com</string>
    <string name="senha">Senha</string>
    <string name="hint_senha_cadastro">*******</string>
    <string name="cep">CEP</string>
    <string name="_00000_000">00000-000</string>
    <string name="bairro">Bairro</string>
    <string name="consola_o">Consolação</string>
    <string name="lougradouro">Lougradouro</string>
    <string name="rua_haddock_lobo">Rua Haddock Lobo</string>
    <string name="cidade">Cidade</string>
    <string name="s_o_paulo">São Paulo</string>
    <string name="estado">Estado</string>
    <string name="sp">SP</string>
    <string name="ocupa_o">Ocupação</string>
    <string name="_35">35</string>
    <string name="servi_os">Serviços</string>
    <string name="piscina">Piscina</string>
    <string name="passeio">Passeio</string>
    <string name="parquinho">Parquinho</string>
    <string name="adestramento">Adestramento</string>
    <string name="brinquedos">Brinquedos</string>
    <string name="spa">Spa</string>
    <string name="banho">Banho</string>
    <string name="nutricionista">Nutricionista</string>
    <string name="tosa">Tosa</string>
    <string name="veterinario">Veterinario</string>
    <string name="animais_permitidos">Animais permitidos</string>
    <string name="c_es">Cães</string>
    <string name="gatos">Gatos</string>
    <string name="aves">Aves</string>
    <string name="anf_bio">Anfíbio</string>
    <string name="roedores">Roedores</string>
    <string name="r_pteis">Répteis</string>
    <string name="outros">Outros</string>
    <string name="insira_imagens_de_seu_estabelecimento_para_mostrar_aos_seus_novos_clientes_formato_png_ou_jpg">Insira imagens de seu estabelecimento para mostrar aos seus novos clientes! (Formato PNG ou JPG)</string>

</resources>