<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1_2_3"
        android:textSize="40sp"
        android:textColor="#000000"

        android:layout_centerHorizontal="true"
        android:id="@+id/tv_indicador">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:orientation="horizontal"
        android:layout_below="@id/tv_indicador"
        android:layout_centerHorizontal="true"
        android:id="@+id/ll_pagina">

        <EditText
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:textSize="20sp"
            android:background="@drawable/border_blue"
            android:id="@+id/et_pagina_um">
        </EditText>

        <EditText
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:textSize="20dp"
            android:background="#FFFFFF">
        </EditText>

        <EditText
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:textSize="20dp"
            android:background="@drawable/border_yellow"
            android:id="@+id/et_pagina_dois">
        </EditText>

        <EditText
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:textSize="20dp"
            android:background="#FFFFFF">
        </EditText>

        <EditText
            android:layout_width="30dp"
            android:layout_height="10dp"
            android:textSize="20dp"
            android:background="@drawable/border_yellow"
            android:id="@+id/et_pagina_tres">
        </EditText>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/amarelo_padrao"
        android:text="@string/empresa"
        android:layout_below="@+id/ll_pagina"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:id="@+id/tv_empresa">
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/tv_empresa"
        android:textSize="25sp"
        android:id="@+id/tv_nome"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nome"
        android:hint="@string/matheus_eloy_palasson"
        android:background="@drawable/border"
        android:id="@+id/et_nome"
        android:inputType="textCapSentences|textAutoCorrect">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endere_o_de_e_mail"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_nome"
        android:textSize="25sp"
        android:id="@+id/tv_email"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_email"
        android:hint="@string/matheus_palasson_gmail_com"
        android:background="@drawable/border"
        android:id="@+id/et_email"
        android:inputType="textCapSentences|textAutoCorrect">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_email"
        android:textSize="25sp"
        android:id="@+id/tv_senha"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_senha"
        android:hint="@string/hint_senha_cadastro"
        android:background="@drawable/border"
        android:id="@+id/et_senha"
        android:inputType="textPassword">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cep"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_senha"
        android:textSize="25sp"
        android:id="@+id/tv_cep"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cep"
        android:hint="@string/_00000_000"
        android:background="@drawable/border"
        android:id="@+id/et_cep"
        android:inputType="number">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bairro"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_senha"
        android:textSize="25sp"
        android:id="@+id/tv_bairro"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="120dp">
    </TextView>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_bairro"
        android:hint="@string/consola_o"
        android:background="@drawable/border"
        android:layout_alignParentEnd="true"
        android:id="@+id/et_bairro"
        android:inputType="textCapSentences|textAutoCorrect">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lougradouro"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_cep"
        android:textSize="25sp"
        android:id="@+id/tv_logradouro"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_logradouro"
        android:hint="@string/rua_haddock_lobo"
        android:background="@drawable/border"
        android:id="@+id/et_logradouro"
        android:inputType="textCapSentences|textAutoCorrect">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_logradouro"
        android:textSize="25sp"
        android:id="@+id/tv_cidade"
        android:layout_marginStart="10dp">
    </TextView>
    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_cidade"
        android:text="@string/s_o_paulo"
        android:textColor="@color/azul_escuro"
        android:background="@drawable/border"
        android:id="@+id/et_cidade">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado"
        android:textColor="@color/azul_escuro"
        android:layout_below="@id/et_logradouro"
        android:layout_alignParentEnd="true"
        android:textSize="25sp"
        android:id="@+id/tv_estado"
        android:layout_marginEnd="18dp">
    </TextView>
    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_estado"
        android:hint="@string/sp"
        android:layout_alignParentEnd="true"
        android:background="@drawable/border"
        android:id="@+id/et_estado"
        android:inputType="textCapSentences|textAutoCorrect">
    </EditText>

</RelativeLayout>