<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cadastro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        >


    <ImageView
        android:id="@+id/iv_tutor"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@mipmap/tutor"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true">
    </ImageView>

    <TextView
        android:id="@+id/tv_auular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="#033180"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-medium">
    </TextView>

    <TextView
        android:id="@+id/et_usuário"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_tutor"
        android:textColor="@color/amarelo_escuro"
        android:textSize="40sp"
        android:layout_below="@id/iv_tutor"
        android:layout_centerHorizontal="true">
    </TextView>



<LinearLayout
    android:id="@+id/ll_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:orientation="vertical"
    android:layout_below="@+id/et_usuário">


    <TextView
        android:id="@+id/label_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_usuário"
        android:text="@string/tv_email">

    </TextView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300sp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textSize="20sp"
        android:layout_below="@id/label_email"
        >
    </EditText>

    <TextView
        android:id="@+id/label_senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:text="@string/et_senha">

    </TextView>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300sp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_senha"
        android:textSize="20sp"
        android:layout_below="@id/label_senha"
        >
    </EditText>

    <TextView
        android:id="@+id/label_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_senha"
        android:text="@string/et_nome_tutor">

    </TextView>

    <EditText
        android:id="@+id/et_nome"
        android:layout_width="300sp"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_tutor"
        android:textSize="20sp"
        android:layout_below="@id/label_nome"
        >
    </EditText>


    <TextView
        android:id="@+id/label_documento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_nome"
        android:text="@string/tv_documento_tutor">

    </TextView>

    <EditText
        android:id="@+id/et_documento"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        android:hint="@string/hint_documento_tutor"
        android:textSize="20sp"
        android:layout_below="@id/label_documento"
        >
    </EditText>

        <TextView
            android:id="@+id/label_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_documento"
            android:text="@string/tv_telefone">

        </TextView>

        <EditText
            android:id="@+id/et_telefone"
            android:layout_width="300sp"
            android:maxLines="1"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/hint_telefone"
            android:textSize="20sp"
            android:layout_below="@id/label_telefone"
            >
        </EditText>

</LinearLayout>



    <Button
        android:id="@+id/bt_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_form"
        android:text="@string/button_cadastro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="35dp"
        android:backgroundTint="#033180">
    </Button>


        <TextView
            android:id="@+id/tv_teste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_cadastro"
            android:text=""/>



<!--    <TextView-->
<!--        android:id="@+id/tv_footer"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:background="@drawable/gradient"-->
<!--        android:fontFamily="sans-serif-medium"-->
<!--        android:padding="16dp"-->
<!--        android:text="@string/app_name"-->
<!--        android:textAlignment="center"-->
<!--        android:textColor="#FFFF"-->
<!--        android:textSize="40sp"></TextView>-->

    </RelativeLayout>

</ScrollView>