<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".acitivity_cadastro_hotel_pt1">

    <TextView
        android:id="@+id/tv_auular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textColor="@color/azul_escuro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium">
    </TextView>


    <TextView
        android:id="@+id/tv_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_empresa"
        android:textSize="40sp"
        android:textColor="@color/amarelo_escuro"
        android:layout_below="@+id/tv_auular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium">

    </TextView>


    <LinearLayout
        android:id="@+id/ll_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/tv_empresa"
        android:layout_marginTop="30sp">

        <TextView
            android:id="@+id/label_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nome"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"/>

        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nome"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"/>

        <TextView
            android:id="@+id/label_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_nome"
            android:textSize="20sp"/>

        <EditText
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nome"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cadastro_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

</RelativeLayout>