<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">




    <TextView
        android:id="@+id/tv_auular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/azul_escuro"
        android:textSize="50sp"></TextView>

    <ImageView
        android:id="@+id/iv_patinha"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_auular"
        android:src="@mipmap/patinha"></ImageView>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="@string/tv_email"
        android:textSize="30sp"
        android:layout_below="@id/iv_patinha"
        android:layout_centerHorizontal="true">
    </EditText>

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="Senha"
        android:textSize="30sp"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">
    </EditText>

    <TextView
        android:id="@+id/tv_esqueceu_senha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_esqueceu"
        android:layout_below="@id/et_senha"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:textSize="20sp">
    </TextView>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_esqueceu_senha"
        android:text="@string/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="35dp"
        android:backgroundTint="@color/azul_escuro">
    </Button>

    <TextView
        android:id="@+id/tv_ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OU"
        android:textSize="30sp"
        android:layout_below="@id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textColor="#000000"
        android:fontFamily="sans-serif-medium">
    </TextView>

    <Button
        android:id="@+id/bt_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_ou"
        android:text="Google"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:textSize="35dp"
        android:backgroundTint="#033180">
    </Button>



</RelativeLayout>